--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,11 @@
 body {
-    margin: 0px;
+    margin: 0;
 }
 
 .container {
-    padding-left: 15px;
+    padding: 1px 15px 1px 15px;
 }
 
 .title {
-    margin: 0px;
+    margin: 0;
 }
