--- a/template/default/style.css
+++ b/template/default/style.css
@@ -1,6 +1,16 @@
 body {
     margin: 0;
 }
+.alert-error {
+    background-color: lightcoral;
+    width: 100%;
+    color: darkred;
+}
+.alert-cuccess {
+    background-color: #6cff93;
+    width: 100%;
+    color: darkgreen;
+}
 
 .container {
     padding: 1px 15px 1px 15px;
